--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -104,6 +104,7 @@
                 };
                 var MyPos = new google.maps.LatLng(pos.lat, pos.lng)
                 marker.setPosition(MyPos)
+                console.log(pos)
             });
         }
     }
