--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,8 @@
 @import "bootstrap/scss/bootstrap";
 @import "bootswatch/dist/minty/bootswatch";
 
+//= require_tree .
+
 body, html{
   padding: 0;
   margin: 0;
