Make request button rendered if user is not a friend yet, render friends and requests for admin without confirm and delete buttons

--- a/app/views/friendship_requests/_requester.html.erb
+++ b/app/views/friendship_requests/_requester.html.erb
@@ -12,6 +12,8 @@
   <%end %>
   <div class="info">
     <%= requester.name%> <%= requester.surname%>
-    <%=button_to "Confirm", user_friendships_path(requester_id: requester.id), method: :post, class: "btn btn-primary", remote: true%>
+    <% if @user==current_user %>
+      <%=button_to "Confirm", user_friendships_path(requester_id: requester.id), method: :post, class: "btn btn-primary", remote: true%>
+    <%end %>
   </div>
 </div>
