--- a/app/views/users/user_panels/_user_panel.html.erb
+++ b/app/views/users/user_panels/_user_panel.html.erb
@@ -13,4 +13,6 @@
   Interests
   <span class="badge badge-primary badge-pill"></span>
 <%end %>
-<%= button_to "Request friendship", user_friendship_requests_path(user_id: @user.id), method: :post, class: "btn btn-secondary", remote: true%>
+<% unless  current_user.friends.find_by(id: user.id) || current_user.inverse_friends.find_by(id: user.id) %>
+  <%= button_to "Request friendship", user_friendship_requests_path(user_id: user.id), method: :post, class: "btn btn-secondary", remote: true%>
+<% end %>
