--- a/app/views/users/user_panels/_admin_panel.html.erb
+++ b/app/views/users/user_panels/_admin_panel.html.erb
@@ -20,4 +20,6 @@
 <%= link_to edit_user_path(id: user.id), class: "list-group-item list-group-item-action" do %>
   General information
 <%end %>
-<%= button_to "Request friendship", user_friendship_requests_path(user_id: @user.id), method: :post, class: "btn btn-secondary", remote: true%>
+<% unless  current_user.friends.find_by(id: user.id) || current_user.inverse_friends.find_by(id: user.id) %>
+  <%= button_to "Request friendship", user_friendship_requests_path(user_id: user.id), method: :post, class: "btn btn-secondary", remote: true%>
+<% end %>
