Refactor user information input. Add interest choosing page with ajax

--- a/app/views/photos/create.js.erb
+++ b/app/views/photos/create.js.erb
@@ -1,2 +1,2 @@
-$("#sign-up").html("<%= j render(partial: "interests/new") %>");
+$("#interests").html("<%= j render(partial: "interests/new") %>");
 $(".progress-bar").css("width","75%");
