--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
       <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="50"></div>
     </div>
     <p></p>
-    <div class="my-row">
+    <div class="my-row" id="interests">
       <div class="col-sm-3">
       </div>
       <div class="col-sm-5" id="sign-up">
