--- a/app/views/users/user_panels/_user_panel.html.erb
+++ b/app/views/users/user_panels/_user_panel.html.erb
@@ -9,7 +9,7 @@
   Friends
   <span class="badge badge-primary badge-pill"></span>
 <%end %>
-<%= link_to user_posts_path(user_id: user.id), class: "list-group-item list-group-item-action" do %>
+<%= link_to user_interests_path(user_id: user.id), class: "list-group-item list-group-item-action" do %>
   Interests
   <span class="badge badge-primary badge-pill"></span>
 <%end %>
