Fix rendering friends and inverse friends of user

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -77,7 +77,7 @@
         });
 
         let friend;
-        <% @user.friends.each do |friend| %>
+        <% @friends.each do |friend| %>
           pos = {
             lat: '<%= friend.location.latitude %>',
             lng: '<%= friend.location.longitude %>'
