--- a/app/views/interests/_interests.html.erb
+++ b/app/views/interests/_interests.html.erb
@@ -1,10 +1,10 @@
-<% @interest_categories.each do |category| %>
+<% interest_categories.each do |category| %>
   <div class="interest">
     <p>
     <h3><%=category.category_name %></h3>
     </p>
     <%category.interests.each do |interest| %>
-      <% if @user.interests.include? interest %>
+      <% if user.interests.include? interest %>
         <p>
           <%= interest.name %>
         </p>
@@ -12,6 +12,8 @@
     <% end %>
   </div>
 <% end %>
+<% if user == current_user %>
 <p>
-  <%= button_to 'Edit interests', edit_user_interest_path(id: @user.id), method: :get, class: "btn btn-primary", remote: true %>
+  <%= button_to 'Edit interests', edit_user_interest_path(id: user.id), method: :get, class: "btn btn-primary", remote: true %>
 </p>
+<% end %>
