--- a/app/views/interests/update.js.erb
+++ b/app/views/interests/update.js.erb
@@ -1,1 +1,1 @@
-$("#user_interests").html("<%= j render(partial: "interests/interests" ) %>");
+$("#user_interests").html("<%= j render(partial: "interests/interests", locals:  {user: @user, interest_categories: @interest_categories}) %>");
