--- a/app/views/posts/_tag_form.html.erb
+++ b/app/views/posts/_tag_form.html.erb
@@ -1,4 +1,14 @@
 <%= bootstrap_form_with model: post, url: my_url, remote: true do |form| %>
+
+  <label class="container">Public
+    <%= check_box_tag(:status, :visible) %>
+    <span class="checkmark"></span>
+  </label>
+  <label class="container">Private
+    <%= check_box_tag(:status, :unvisible) %>
+    <span class="checkmark"></span>
+  </label>
+
   <p>
     <%= form.text_area :title%>
   </p>
