--- a/app/views/posts/_tag_form.html.erb
+++ b/app/views/posts/_tag_form.html.erb
@@ -26,7 +26,7 @@
   </p>
 
 
-  <div class="row">
+  <div class="my-row">
     <div class="col-sm-11">
       <p>
         <%= form.submit class: "btn btn-primary"%>
