--- a/app/views/posts/create.js.erb
+++ b/app/views/posts/create.js.erb
@@ -1,3 +1,3 @@
 console.log("ajax working coment created");
-$("#posts").append("<%= j render(@post) %>")
+$("#posts").html("<%= j render(partial: "post", collection: @user.posts.reverse) %>")
 $("#target-for-change").html("<%= j render(partial: "form") %>");
