--- a/app/views/users/_date.html.erb
+++ b/app/views/users/_date.html.erb
@@ -1,7 +1,7 @@
 <%= bootstrap_form_with model: @user do |form| %>
 
   <p>
-    <%= form.date_field :user, :class => 'datepicker'%>
+    <%= date_field(:user, :birthday) %>
   </p>
 
 <% end %>
