Create User birthday editing with ajax

--- a/app/views/users/_date.html.erb
+++ b/app/views/users/_date.html.erb
@@ -1,7 +1,9 @@
-<%= bootstrap_form_with model: @user do |form| %>
+<%= bootstrap_form_with model: @user, url: my_url, remote: true do |form| %>
 
   <p>
-    <%= date_field(:user, :birthday) %>
+    <%= form.date_field(:birthday) %>
   </p>
+
+  <%= form.submit class: "btn btn-primary"%>
 
 <% end %>
