--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -13,4 +13,8 @@
     <%= check_box_tag(:search_parameter, :author) %>
     <span class="checkmark"></span>
   </label>
+  <label class="container">By category
+    <%= check_box_tag(:search_parameter, :category) %>
+    <span class="checkmark"></span>
+  </label>
 <% end %>
