--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,11 @@
       <div class="col-sm-6"></div>
       <div class="col-sm-6">
         <p>
-          <h2><%= @user.name %> <%= @user.surname %></h2>
+          <h2><%= @user.name %> <%= @user.surname %>
+            <% if @user.online? %>
+              Online
+            <% end %>
+          </h2>
           <%= @user.nickname %>
         </p>
   <div class="custom-control custom-switch toggles">
