Add online/offline icons, render icons on User profile page and Friends page

--- a/app/assets/stylesheets/friendships.scss
+++ b/app/assets/stylesheets/friendships.scss
@@ -1,8 +1,21 @@
-div.person{
-  display: inline-block;
-  padding: 30px;
-  margin: 2.5px;
+#friend-list{
+  display: inline-flex;
+  text-align: right;
 }
+
+div.person{
+  overflow: auto;
+  margin: auto;
+  padding: 20px;
+  text-align: center;
+}
+
 div.info{
-  padding: 5px;
+  text-align: center;
+}
+
+#status-img{
+  width: 10%;
+  height: 10%;
+  overflow: auto;
 }
