--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -40,7 +40,26 @@
       <p class="card-text"></p>
     </div>
     <div class="card-footer text-muted">
-      2 days ago
+      <div class="my-row">
+        <div class="col-sm-10">
+          <%= link_to image_tag('comment.png', width: "30", height: "30"), user_post_comments_path(post_id: post.id) %>
+        </div>
+        <div class="col-sm-2">
+          <div class="row">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-8">
+              <%=  post.rating_likes %>
+              <div id="likes">
+                <%= link_to image_tag('like.png', width: "30", height: "30"), user_post_like_path(post_id: post.id), method: :put, remote: true %>
+              </div>
+              <div id="dislikes">
+                <%= link_to image_tag('dislike.png', width: "30", height: "30"), user_post_dislike_path(post_id: post.id), method: :put %>
+              </div>
+              <%=  post.rating_dislikes %>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
