--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -48,14 +48,14 @@
           <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-8">
-              <%=  post.rating_likes %>
+              <%= post.liked_users.size %>
               <div id="likes">
-                <%= link_to image_tag('like.png', width: "30", height: "30"), user_post_like_path(post_id: post.id), method: :put, remote: true %>
+                <% if current_user.liked_posts.include? post%>
+                  <%= render partial: "posts/liked_button" %>
+                <% else %>
+                  <%= link_to image_tag('like.png', width: "30", height: "30"), user_post_like_path(post_id: post.id), method: :put, remote: true %>
+                <% end %>
               </div>
-              <div id="dislikes">
-                <%= link_to image_tag('dislike.png', width: "30", height: "30"), user_post_dislike_path(post_id: post.id), method: :put %>
-              </div>
-              <%=  post.rating_dislikes %>
             </div>
           </div>
         </div>
