--- a/app/views/posts/_tag_cloud.html.erb
+++ b/app/views/posts/_tag_cloud.html.erb
@@ -1,4 +1,3 @@
-
 <div class="card mb-3">
   <h3 class="card-header">Tags:</h3>
   <div class="card-body"><div class="tagcloud">
@@ -13,5 +12,11 @@
     </p>
   </ul>
 </div>
+  </div>
+</div>
+<div class="card mb-3 overflow-auto">
+  <h3 class="card-header">Recent activities:</h3>
+  <div class="card-body" id="main-activities">
+
   </div>
 </div>
