--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,2 +1,2 @@
 <h1>New photo</h1>
-<%= render partial: "photos/form"%>
+<%= render partial: "photos/form", locals: {photo: @photo, my_url: user_photos_path}%>
