--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -12,11 +12,13 @@
   <%= render partial: "users/general_info", locals: {user: @user} %>
 </div>
 
-<p id="avatar-edit">
-<h1>Avatar <%= link_to image_tag('edit.png', width: "30", height: "30") %> </h1>
+<p>
+<h1 id="avatar-info">Avatar <%= link_to image_tag('edit.png', width: "30", height: "30"), edit_user_photo_path(id: @user.id), remote: true %> </h1>
+<div id="avatar-edit">
+</div>
 </p>
 
-<h1 id="birthday-info">Birthday <%= link_to image_tag('edit.png', width: "30", height: "30"),  user_birthday_edit_path(id: @user.id), remote: true%> </h1>
+<h1 id="birthday-info">Birthday <%= link_to image_tag('edit.png', width: "30", height: "30"), user_birthday_edit_path(id: @user.id), remote: true%> </h1>
 <div id="birthday-edit">
 <h3><%= render(partial: 'users/birthday', locals: {user: @user}) %></h3>
 </div>
