--- a/app/views/photos/edit.js.erb
+++ b/app/views/photos/edit.js.erb
@@ -1,2 +1,6 @@
-$("#avatar-edit").html("<%= j render(partial: 'form', locals: {photo: @photo, my_url: user_photo_path(id: @photo.id)}) %>");
+<% if @user.photo.nil? %>
+  $("#avatar-edit").html("<%= j render(partial: 'form', locals: {photo: @photo, my_url: user_photos_path}) %>");
+<% else %>
+  $("#avatar-edit").html("<%= j render(partial: 'form', locals: {photo: @photo, my_url: user_photo_path(id: @photo.id)}) %>");
+<% end %>
 $("#avatar-info").html("<h1 id='avatar-info'> Avatar </h1>");
