Refactor views (especially partials) for better style and logic

--- a/app/views/addresses/update.js.erb
+++ b/app/views/addresses/update.js.erb
@@ -1,2 +1,2 @@
 $("#address-edit").html("<%= j render(partial: 'addresses/address', locals: {address: @user.address}) %>");
-$("#address-info").html("<%= j render(partial: 'addresses/edit_h1') %>");
+$("#address-info").html("<%= j render(partial: 'addresses/edit_h1', locals: {address: @user.address}) %>");
