--- a/app/views/comments/show.js.erb
+++ b/app/views/comments/show.js.erb
@@ -1,1 +1,1 @@
-$("#comment-<%= @commentable.id %>").html("<%= j render(partial: 'show') %>");
+$("#comment-<%= @commentable.id %>").html("<%= j render(partial: 'show', locals: {commentable: @commentable, comments: @comments}) %>");
