--- a/app/views/interests/edit.js.erb
+++ b/app/views/interests/edit.js.erb
@@ -1,1 +1,1 @@
-$("#user_interests").html("<%= j render(partial: "interests/edit_interst") %>");
+$("#user_interests").html("<%= j render(partial: "interests/edit_interst", locals: {interest_categories: @interest_categories, user: @user}) %>");
