--- a/app/views/posts/_new.html.erb
+++ b/app/views/posts/_new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "tag_form", locals: {my_url: user_posts_path, post: @post, categories: @categories} %>
+<%= render partial: "tag_form", locals: {my_url: user_posts_path, post: post, categories: categories} %>
