--- a/app/views/posts/_show.html.erb
+++ b/app/views/posts/_show.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "posts/full_post", locals: {my_url: user_posts_path, post: @post, categories: @categories} %>
+<%= render partial: "posts/full_post", locals: {my_url: my_url, post: post, categories: categories} %>
