--- a/app/views/friendship_requests/_requester.html.erb
+++ b/app/views/friendship_requests/_requester.html.erb
@@ -12,7 +12,7 @@
   <%end %>
   <div class="info">
     <%= requester.name%> <%= requester.surname%>
-    <% if @user==current_user %>
+    <% if user == current_user %>
       <%=button_to "Confirm", user_friendships_path(requester_id: requester.id), method: :post, class: "btn btn-primary", remote: true%>
     <%end %>
   </div>
