--- a/app/views/friendship_requests/index.html.erb
+++ b/app/views/friendship_requests/index.html.erb
@@ -18,10 +18,10 @@
       </ul>
       <div id="myTabContent" class="tab-content">
         <div class="tab-pane fade active show" id="requested">
-            <%= render partial: "requester", collection: @received_requests %>
+            <%= render partial: "requester", collection: @received_requests, locals: {user: @user} %>
         </div>
         <div class="tab-pane fade" id="sent">
-          <%= render partial: "requester", collection: @requested_requests %>
+          <%= render partial: "requester", collection: @requested_requests, locals: {user: @user}  %>
         </div>
       </div>
     </div>
