--- a/app/views/interests/_edit_interst.html.erb
+++ b/app/views/interests/_edit_interst.html.erb
@@ -1,12 +1,12 @@
 <%= bootstrap_form_with url: user_interests_path, method: :put, remote: true do |f| %>
-  <% @interest_categories.each do |category| %>
+  <% interest_categories.each do |category| %>
     <div class="interest">
       <p>
       <h3><%=category.category_name %></h3>
       </p>
       <%category.interests.each do |interest| %>
         <label class="container"><%= interest.name %>
-          <% if @user.interests.include? interest%>
+          <% if user.interests.include? interest%>
             <%= check_box(:interests, category.category_name, {:multiple => true, checked: true}, interest.name, nil) %>
           <% else %>
             <%= check_box(:interests, category.category_name, {:multiple => true}, interest.name, nil) %>
