--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,3 @@
 <div id="target-for-change">
-  <%= button_to 'Create post', new_user_post_path(@user), method: :get, class: "btn btn-primary", remote: true %>
+  <%= button_to 'Create post', new_user_post_path(user), method: :get, class: "btn btn-primary", remote: true %>
 </div>
