--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,7 +12,7 @@
   </div>
   <div class="col-sm-8">
     <h1 class="display-3">Posts:</h1>
-      <%= render partial: "form", locals: {my_url: user_posts_path, post: @post} %>
+      <%= render partial: "form", locals: {user: @user} %>
     <p></p>
     <div id="posts">
 <p>
