--- a/app/views/users/_date.html.erb
+++ b/app/views/users/_date.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_with model: @user, url: my_url, remote: true do |form| %>
+<%= bootstrap_form_with model: user, url: my_url, remote: true do |form| %>
 
   <p>
     <%= form.date_field(:birthday) %>
