--- a/app/views/users/update.js.erb
+++ b/app/views/users/update.js.erb
@@ -1,2 +1,2 @@
 $("#name-edit").html("<%= j render(partial: "users/general_info", locals: {user: @user}) %>");
-$("#general-info").html("<%= j render(partial: 'users/edit_h1')%>");
+$("#general-info").html("<%= j render(partial: 'users/edit_h1', locals: {user: @user})%>");
