--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
     </div>
   </nav>
   <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <p class="alert alert-dismissible alert-primary" style="display: none" id="my-alert"><%= alert %></p>
   <%= yield %>
   </body>
 
