--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "bootswatch/dist/minty/bootswatch";
 @import "chosen";
+@import "toastr";
 
 //= require_tree .
 
@@ -100,4 +101,8 @@ body, html{
 #main-activities{
   height:300px;
   overflow-y: scroll;
+}
+
+.toast-pink{
+  background-color: #cf777c;
 }
